--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
     -webkit-touch-callout: none;
     font-family: system-ui, sans-serif;
     height: 100%;
-    background-color: #e3f2fd;
+    background-color: #e3f2fd; /* Colors picked from: https://ter.ren/color */
 }
 
 .screen {
