--- a/public/style.css
+++ b/public/style.css
@@ -54,75 +54,8 @@ body{
 	font-size:14px;
 	color:#888;
 }
-.pro-features {
-	position: fixed;
-	right: -300px;
-	width: 300px;
-	height: auto;
-	line-height: 46px;
-	font-size: 14px;
-	background: #fff;
-	text-align: left;
-	color: #333;
-	top: 50%;
-	transform:translateY(-50%);
-	box-shadow: -4px 0px 5px #00000036;
-	color: #fff;
-	z-index: 9999;
-	padding:20px 30px 30px 30px;
-	-webkit-transition:all 0.4s ease;
-	-moz-transition:all 0.4s ease;
-	transition:all 0.4s ease;
-}
-.pro-features.active{
-	right:0;
-}
-.pro-features li.big-title {
-	font-weight: 600;
-	color: #1A76D1;
-	font-size: 15px;
-}
-.pro-features li.title {
-	font-weight: 600;
-	color: #1A76D1;
-	font-size: 15px;
-}
-.pro-features .button{}
-.pro-features .button .btn {
-	width: 100%;
-	text-align: center;
-	margin-top: 8px;
-	display: inline-block;
-	float: left;
-	font-size: 13px;
-	width: 100%;
-	text-transform: capitalize;
-}
-.pro-features li {
-	color: #333;
-	margin: 0;
-	padding: 0;
-	line-height: 22px;
-	margin-bottom: 10px;
-}
-.get-pro {
-	position: absolute;
-	left: -80px;
-	width:80px;
-	height: 45px;
-	line-height: 45px;
-	font-size: 14px;
-	border-radius: 5px 0 0 5px;
-	background: #1A76D1;
-	text-align: center;
-	color: #fff;
-	top: 0;
-	cursor: pointer;
-	box-shadow: -4px 0px 5px #00000036;
-}
-.get-pro:hover{
-	
-}
+
+
 #scrollUp {
 	bottom: 15px;
 	right: 15px;
@@ -4170,3 +4103,83 @@ body{
 /*=========================
 	End Footer CSS
 ===========================*/
+
+
+/*=========================
+	Start Demo CSS
+===========================*/
+
+.screen {
+    width: calc(100% - 10px); /* 10px margin on each side */
+    max-width: 900px;
+    margin: 0 auto; /* Center horizontally */
+}
+
+#conversation_screen {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.conversation_history {
+    flex-grow: 1;
+    overflow-y: scroll;
+    background-color: white;
+    border-radius: 10px; /* Curved corners */
+    margin-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.message_entry {
+    font-size: 22px;
+    margin: 20px 0px; /* Background color does not include margin */
+    padding: 10px 8px; /* Background color includes padding */
+}
+
+.message_entry:first-child {
+    margin-top: 0px;
+}
+
+.message_entry.sent_message {
+    background-color: #e3f2fd;
+    border-radius: 5px; /* Curved corners */
+}
+
+.message_from {
+    font-weight: 500; /* Semi-bold. Normal is 400, bold is 700. */
+    margin-bottom: 12px;
+}
+
+.message_text {
+    white-space: pre-wrap; /* Preserve newlines */
+}
+
+.conversation_controls_top {
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+.conversation_controls_top select {
+    font-size: 22px;
+    padding: 3px 6px;
+}
+
+.conversation_controls_bottom {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.conversation_controls_bottom textarea {
+    font-size: 22px;
+    padding: 3px 6px;
+    resize: none;
+    font-family: inherit;
+    flex-grow: 1;
+    height: 60px; /* Because of flex, this affects the height of the whole row */
+}
+
+.conversation_controls_bottom button {
+    font-size: 22px;
+    padding: 3px 6px;
+}
