--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,4 @@
+/* General Styles */
 @charset "UTF-8";
 
 html {
@@ -89,3 +90,87 @@ body {
     font-size: 22px;
     padding: 3px 6px;
 }
+  
+  form {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    
+  }
+  
+  h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #333;
+  }
+
+  h2 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  
+  /* Form Sections */
+  div {
+    margin-bottom: 20px;
+  }
+  
+  p {
+    font-weight: bold;
+    color: #333;
+    margin-bottom: 10px;
+  }
+  
+  /* Input Styles */
+  input[type="text"],
+  input[type="date"],
+  textarea,
+  select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+    font-size: 14px;
+    
+  }
+  
+  /* Checkbox and Radio Styles */
+  input[type="checkbox"],
+  input[type="radio"] {
+    margin-right: 10px;
+  }
+  
+  label {
+    display: inline-block;
+    margin-bottom: 5px;
+  }
+  
+  /* Button Styles */
+  button {
+    background-color: lightblue;
+    color: black;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  button:hover {
+    background-color: lightblue;
+  }
+  
+  button[type="submit"] {
+    float: right;
+  }
+  
+  /* Responsive Styles */
+  @media (max-width: 600px) {
+    form {
+      padding: 10px;
+    }
+  }
